--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.application.name=discovery-service
-server.port=8761
+server.port=${PORT:8761}
 
-eureka.instance.hostname=localhost
+eureka.instance.hostname=${EUREKA_HOSTNAME:localhost}
 eureka.instance.prefer-ip-address=false
-eureka.instance.lease-renewal-interval-in-seconds=0
 
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
