Add Eureka prod config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ server.port=${PORT:8761}
 
 eureka.instance.hostname=${EUREKA_HOSTNAME:localhost}
 eureka.instance.prefer-ip-address=false
-
+eureka.instance.non-secure-port-enabled=false
+eureka.instance.secure-port-enabled=true
+eureka.instance.secure-port=${PORT:443}
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
